making the navigation bar fixed to the top, adding a brackground image for package page with setting z-index; adding a Recommended badge to the first plan on pakage page

--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@
 }
 
 .plan-highlighted .plan_price {
-  color: rgb(5, 175, 5);
+  color: #05af05;
 }
 
 .plan_features {
