--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,13 +1,21 @@
 main {
-  padding: 32px;
+  padding-top: 32px;
+}
+
+.background {
+  background: url("images/plans-background.jpg");
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
 }
 
 .package {
   width: 80%;
-  height: auto;
   margin: 16px 0px;
   border: 4px solid #0e4f1f;
   border-left: none;
+  position: relative;
   /* background-color: aquamarine; */
 }
 .package:hover,
@@ -20,6 +28,17 @@ main {
   color: inherit;
   display: block;
   padding: 32px;
+}
+
+.package_badge {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  margin: 20px;
+  font-size: 12px;
+  color: floralwhite;
+  background: #ff5454;
+  padding: 8px;
 }
 .package_subtitle {
   color: #979797;
