--- a/shared.css
+++ b/shared.css
@@ -9,8 +9,14 @@ body {
 
 .main-header {
   width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
   background: #2ddf5c;
   padding: 8px 16px;
+  /* display: flex;
+  overflow: hidden; */
 }
 
 .main-header > div {
